--- a/package.json
+++ b/package.json
@@ -1,17 +1,34 @@
 {
   "name": "autoplay",
   "private": "true",
-  "version": "0.0.0",
+  "version": "1.0.0",
   "description": "Puppeteer automation in Chrome to autoplay video",
-  "main": "watch.js",
   "scripts": {
-    "run": "node watch.js"
+    "start": "run-s sched watch",
+    "sched": "ts-node src/schedule.ts",
+    "watch": "ts-node src/watch.ts",
+    "lint": "eslint src",
+    "format": "prettier --write src",
+    "upgrade-packages": "ncu -u"
   },
   "author": "",
   "license": "Unlicense",
   "dependencies": {
     "dotenv": "^16.0.3",
     "fs": "^0.0.1-security",
-    "puppeteer-core": "^19.7.2"
+    "npm-run-all": "^4.1.5",
+    "puppeteer-core": "^19.11.1"
+  },
+  "devDependencies": {
+    "@types/node": "^18.16.3",
+    "@typescript-eslint/eslint-plugin": "^5.59.1",
+    "@typescript-eslint/parser": "^5.59.1",
+    "eslint": "^8.39.0",
+    "eslint-config-prettier": "^8.8.0",
+    "eslint-plugin-prettier": "^4.2.1",
+    "npm-check-updates": "^16.10.9",
+    "prettier": "^2.8.8",
+    "ts-node": "^10.9.1",
+    "typescript": "^5.0.4"
   }
 }
