--- a/.env
+++ b/.env
@@ -1,5 +1,5 @@
 ACCOUNTNAME="example@example.com"
 PASSWORD="example"
-USER_DATA_DIR="./path/to/user/data/dir"
-# profile dir within userDataDir for ex: ./path/to/user/data/dir/MyProfile
+USER_DATA_DIR="./profile"
+# profile dir within userDataDir for ex: ./profile/MyProfile
 PROFILE_DIR="MyProfile"
