--- a/.gitignore
+++ b/.gitignore
@@ -14,6 +14,8 @@ dist-ssr
 .tsbuildinfo
 
 # local env files
+.env
+.env.*
 .env.local
 .env.*.local
 
@@ -27,3 +29,6 @@ dist-ssr
 *.njsproj
 *.sln
 *.sw?
+
+# Chrome profile
+profile
