--- a/package.json
+++ b/package.json
@@ -14,10 +14,14 @@
   "author": "",
   "license": "Unlicense",
   "dependencies": {
+    "dayjs": "^1.11.7",
     "dotenv": "^16.0.3",
     "fs": "^0.0.1-security",
     "npm-run-all": "^4.1.5",
-    "puppeteer-core": "^19.11.1"
+    "puppeteer": "^19.11.1",
+    "puppeteer-core": "^19.11.1",
+    "puppeteer-extra": "^3.3.6",
+    "puppeteer-extra-plugin-stealth": "^2.11.2"
   },
   "devDependencies": {
     "@types/node": "^18.16.3",
