--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "dayjs": "^1.11.7",
     "dotenv": "^16.0.3",
     "fs": "^0.0.1-security",
+    "lodash": "^4.17.21",
     "npm-run-all": "^4.1.5",
     "puppeteer": "^19.11.1",
     "puppeteer-core": "^19.11.1",
@@ -24,6 +25,7 @@
     "puppeteer-extra-plugin-stealth": "^2.11.2"
   },
   "devDependencies": {
+    "@types/lodash": "^4.14.194",
     "@types/node": "^18.16.3",
     "@typescript-eslint/eslint-plugin": "^5.59.1",
     "@typescript-eslint/parser": "^5.59.1",
