--- a/package.json
+++ b/package.json
@@ -9,32 +9,32 @@
     "watch": "ts-node src/watch.ts",
     "lint": "eslint src",
     "format": "prettier --write src",
-    "upgrade-packages": "ncu -u"
+    "update-packages": "ncu -u"
   },
   "author": "",
   "license": "Unlicense",
   "dependencies": {
-    "dayjs": "^1.11.7",
-    "dotenv": "^16.0.3",
+    "dayjs": "^1.11.9",
+    "dotenv": "^16.3.1",
     "fs": "^0.0.1-security",
     "lodash": "^4.17.21",
     "npm-run-all": "^4.1.5",
-    "puppeteer": "^19.11.1",
-    "puppeteer-core": "^19.11.1",
+    "puppeteer": "^21.0.0",
+    "puppeteer-core": "^21.0.0",
     "puppeteer-extra": "^3.3.6",
     "puppeteer-extra-plugin-stealth": "^2.11.2"
   },
   "devDependencies": {
-    "@types/lodash": "^4.14.194",
-    "@types/node": "^18.16.3",
-    "@typescript-eslint/eslint-plugin": "^5.59.1",
-    "@typescript-eslint/parser": "^5.59.1",
-    "eslint": "^8.39.0",
-    "eslint-config-prettier": "^8.8.0",
-    "eslint-plugin-prettier": "^4.2.1",
-    "npm-check-updates": "^16.10.9",
-    "prettier": "^2.8.8",
+    "@types/lodash": "^4.14.196",
+    "@types/node": "^20.4.6",
+    "@typescript-eslint/eslint-plugin": "^6.2.1",
+    "@typescript-eslint/parser": "^6.2.1",
+    "eslint": "^8.46.0",
+    "eslint-config-prettier": "^8.9.0",
+    "eslint-plugin-prettier": "^5.0.0",
+    "npm-check-updates": "^16.10.17",
+    "prettier": "^3.0.0",
     "ts-node": "^10.9.1",
-    "typescript": "^5.0.4"
+    "typescript": "^5.1.6"
   }
 }
